--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
     width: 70px;
     color: black;
     border-radius: 10px;
-    background-color: #ff7272;
+    background-color: transparent;
     padding: 5px;
     transition: 0.3s;
 }
@@ -15,7 +15,47 @@
     gap: 10px;
 }
 
+.news-card {
+    border: 1px solid #ffffff;
+    padding: 10px;
+    margin: 10px;
+    border-radius: none;
+  }
+  
+  .news-image {
+    width: 100%;
+    height: 200px; /* Adjust the height as needed */
+    object-fit: cover;
+  }
+  
+  .news-content {
+    padding: 10px;
+  }
+  
+  .news-title {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .news-summary {
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
+  
+  .news-timestamp {
+    font-size: 12px;
+    color: #888;
+  }
+.news-card:hover{
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
-
-
+#main{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+}
 
